Update application.properties change server port number to 8888.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.password=Mdlehdcks123
 #spring.datasource.password=1234567890
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8888
