--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'javax.servlet:jstl'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
+	implementation 'io.jsonwebtoken:jjwt-root:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -39,6 +42,7 @@ dependencies {
 	implementation('ch.qos.logback:logback-classic')
 
 	implementation('org.codehaus.groovy:groovy')
+
 }
 
 tasks.named('test') {
